# rust-stocks

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DATABASE_SETUP.md  DATA_COLLECTION_CONSOLIDATION_PLAN.md  README.md  REFRESH_DATA_ARCHITECTURE.md  SIMFIN_IMPORT_README.md  SQLX_BATCH_FIX_SCRIPT.md  SQLX_IMPORT_FIX_PLAN.md  SQLX_MIGRATION_ANALYSIS.md  SQLX_MIGRATION_PROGRESS.md  TODO.md  TUI_ARCHITECTURE_REDESIGN.md  TUI_TO_TAURI_MIGRATION.md  TechDebt_Audit.md  cleanup_dev_processes.sh  cleanup_tests.sh  database_migration_simfin.sql  database_migration_v2.sql  package-lock.json  package.json  populate_db.rs  refresh_token.py  schema_backup.sql  simple_populate.py  test_api_response.js  test_data_collector_sqlx.rs  test_db_state.rs  test_tui.rs
archive/: README.md
backend/: concurrent_fetcher.rs  main.rs  utils.rs
context/: ANNUAL_DATA_STANDARDIZATION_PLAN.md  API_VALIDATION_TYPESCRIPT_BINDINGS_PLAN.md  ARCHITECTURE.md  Architecture_DataAnalysis_Redesign.md  CLAUDE.md  CONCURRENT_EDGAR_EXTRACTION_ARCHITECTURE.md  DATABASE_MIGRATIONS.md  DATABASE_NORMALIZATION_CLEANUP_PLAN.md  DATABASE_NORMALIZATION_IMPLEMENTATION_PLAN.md  DATA_REFRESH_FRONTEND_ARCHITECTURE.md  EDGAR_DATA_ANALYSIS.md  EDGAR_DATA_EXTRACTION_ARCHITECTURE.md  EDGAR_DATA_EXTRACTION_UNIFIED_ARCHITECTURE.md  FRONTEND_EXPANDABLE_PANELS_CONTEXT.md  FRONTEND_MIGRATION_HISTORY.md  FRONTEND_UX_IMPROVEMENT_PLAN.md  GRAHAM_SCREENER_IMPLEMENTATION_ROADMAP.md  GRAHAM_VALUE_SCREENER_ARCHITECTURE.md  INCREMENTAL_SCHWAB_UPDATE_ARCHITECTURE.md  OSHAGHNESSY_VALUE_COMPOSITE_ARCHITECTURE.md  OSHAGHNESSY_VALUE_COMPOSITE_IMPROVED.md  PIOTROSKI_F_SCORE_ARCHITECTURE.md  PIOTROSKI_F_SCORE_IMPROVED.md  README.md  REFRESH_DATA_EDGAR_INTEGRATION.md  SCHWAB_BULK_DOWNLOAD_ARCHITECTURE.md  SCHWAB_PRICE_DATA_STRATEGY.md  SCREENING_IMPLEMENTATION_ROADMAP.md  SCREENING_METHODS_COMPLETE.md  SOLIDJS_FRONTEND_ARCHITECTURE.md  TODO.md  TRANSACTION_IMPLEMENTATION_CHECKLIST.md  TUI_ARCHITECTURE_REDESIGN.md  TUI_TO_TAURI_MIGRATION.md  TechDebt_Audit.md  UI_CLEANUP_AND_SCREENING_FIX_PLAN.md  UI_REDESIGN_PLAN.md  UNIFIED_DATA_REFRESH_ARCHITECTURE.md  UNIFIED_DATA_REFRESH_SYSTEM_DESIGN.md  alphavantage_architecture.md  (+11 more)
frontend/: package-lock.json  package.json  tailwind.confirg.js  vite.config.js
migrations/: 20241201000000_initial_schema.sql  20250905000001_enhanced_schema.sql
src/: index.html  (+11 more)
src-tauri/: .taurignore  Cargo.toml  build.rs  schwab_download_progress.json  tauri.conf.json  test_ratio_calc.rs  test_ttm_direct.rs
src-tauri/bindings/: DataFreshnessStatus.ts  DataSummary.ts  OShaughnessyValueResult.ts  PiotoskiFScoreResult.ts  PiotroskilCriterion.ts  PiotroskilScreeningCriteria.ts  RefreshCompletedEvent.ts  RefreshMode.ts  RefreshProgressDto.ts  RefreshRecommendation.ts  RefreshRequestDto.ts  RefreshStatus.ts  ScreeningReadiness.ts  SystemFreshnessReport.ts
src-tauri/db/: backup_database.sh
src-tauri/db/migrations/: 20240918_create_cik_mappings_sp500.sql  20240918_create_company_metadata.sql  20240922_add_piotroski_cash_flow_data.sql  20240922_create_complete_piotroski_view.sql  20240922_create_simplified_piotroski_view.sql  20250905000002_migrate_data.sql  20250906000003_add_fundamental_columns.sql  20250908000004_add_sp500_symbols.sql  20250909000005_add_multi_period_ratios.sql  20250915000006_complete_revenue_import.sql  20250916000007_add_garp_pe_screening.sql  20250917000008_add_graham_screening.sql  2025091810_create_cik_mappings.sql  2025091813_create_price_data_coverage.sql  2025091814_create_data_refresh_tracking.sql  2025091815_create_cash_flow_statements.sql  2025091817_create_dividend_history.sql  20250918_enhance_balance_sheets_edgar.sql  20250918_enhance_income_statements_edgar.sql  2025091922_create_working_oshaughnessy_views.sql  2025091923_create_simplified_oshaughnessy_views.sql  20250919_create_piotroski_oshaughnessy_views.sql  20250919_create_simple_screening_views.sql  20250919_create_sp500_only_screening_views.sql  20250919_create_working_piotroski_views.sql  2025092228_create_improved_piotroski_views.sql  2025092329_enhance_sector_classification.sql  2025092429_fix_piotroski_annual_data.sql  2025092530_replace_gross_with_net_margin.sql  2025092531_complete_net_margin_piotroski.sql  2025092829_add_pb_ratio_column.sql  2025092901_add_pcf_ratio_column.sql  2025092903_add_share_repurchases_column.sql  2025092904_add_shareholder_yield_column.sql  2025092905_rename_ttm_to_annual_columns.sql  2025093001_update_oshaughnessy_views_to_annual.sql  2025093002_simplify_oshaughnessy_views.sql  20251002001606_add_pe_ratio_column.sql  20251002004210_create_pure_oshaughnessy_views.sql  20251002004917_add_cik_column_to_stocks.sql  (+56 more)
src-tauri/src/: data_collector.rs  database_sqlx.rs  import_simfin_launcher.rs  lib.rs  main.rs  main_workspace.rs  types.rs
src-tauri/src/analysis/: graham_screener.rs  mod.rs  pe_statistics.rs  recommendation_engine.rs
src-tauri/src/api/: alpha_vantage_client.rs  mod.rs  schwab_client.rs
src-tauri/src/commands/: analysis.rs  data.rs  data_refresh.rs  earnings.rs  enhanced.rs  fetching.rs  garp_pe.rs  graham_screening.rs  initialization.rs  mod.rs  oshaughnessy_screening.rs  piotroski_screening.rs  recommendations.rs  stocks.rs
src-tauri/src/database/: earnings.rs  helpers.rs  migrations.rs  mod.rs  processing.rs  protected_init.rs
src-tauri/src/extractors/: cash_flow_extractor.rs  mod.rs
src-tauri/src/models/: garp_pe.rs  graham_value.rs  mod.rs
src-tauri/src/tests/: mod.rs  oshaughnessy_test.rs
src-tauri/src/tools/: data_freshness_checker.rs  data_refresh_orchestrator.rs  data_source_config.rs  date_range_calculator.rs  edgar_extractor.rs  freshness_checker.rs  freshness_types.rs  mod.rs  ratio_calculator.rs  sec_edgar_client.rs  simfin_importer.rs  ttm_importer.rs
src-tauri/tests/: README.md  backend_tests.rs  basic_integration_tests.rs  integration_tests.rs  performance_tests.rs  safe_backend_tests.rs
src-tauri/tests/fixtures/: sample_data.sql
src-tauri/tests/helpers/: database.rs  database_setup.rs  mod.rs  sync_report.rs  test_config.rs
(+95 files in other folders)
