[package]
name = "rust-stocks"
version = "0.1.0"
edition = "2021"
default-run = "rust-stocks"

[dependencies]
# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"

# Database
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
dotenvy = "0.15"

# UI Framework
ratatui = "0.28"
crossterm = "0.27"

# Rate limiting
governor = "0.6"

# Fuzzy search for stock lookup
fuzzy-matcher = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for API authentication
base64 = "0.21"

# URL encoding
url = "2.4"

# Async traits
async-trait = "0.1"

# Command line argument parsing
clap = { version = "4.0", features = ["derive"] }

# Additional dependencies for testing
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
wiremock = "0.5"
assert_matches = "1.5"
pretty_assertions = "1.4"

# Test binaries
[[bin]]
name = "test_concurrent_fetcher_sqlx"
path = "test_concurrent_fetcher_sqlx.rs"

[[bin]]
name = "test_data_collector_sqlx"
path = "test_data_collector_sqlx.rs"

[[bin]]
name = "test_analysis_sqlx"
path = "test_analysis_sqlx.rs"

[[bin]]
name = "test_sqlx_validation"
path = "test_sqlx_validation.rs"

[[bin]]
name = "data_collection_test"
path = "tests/bin/data_collection_test.rs"

[[bin]]
name = "api_connectivity_test"
path = "tests/bin/api_connectivity_test.rs"

[[bin]]
name = "update_sp500"
path = "tools/update_sp500.rs"
