[package]
name = "rust-stocks"
version = "0.1.0"
edition = "2021"
description = "Stock Analysis System - Utilities and Tools"
default-run = "stock-analysis"

[dependencies]
# Keep only utility dependencies for tools and tests
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
csv = "1.3"
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "migrate"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }

# Additional dependencies for testing
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
wiremock = "0.5"
assert_matches = "1.5"
pretty_assertions = "1.4"

[[bin]]
name = "stock-analysis"
path = "src/main.rs"

[[bin]]
name = "import-simfin"
path = "src/import_simfin_launcher.rs"
