[package]
name = "rust-stocks-tauri"
version = "0.1.0"
description = "Stock Analysis System - Tauri Backend"
authors = ["rust-stocks"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "rust-stocks-tauri"

[features]
default = []
test-utils = []

[[bin]]
name = "rust-stocks-tauri"
path = "src/main.rs"

# CLI Tools (moved from root workspace)
[[bin]]
name = "stock-analysis"
path = "src/main_workspace.rs"

[[bin]]
name = "import-simfin"
path = "src/import_simfin_launcher.rs"

[[bin]]
name = "import-ttm"
path = "src/bin/import_ttm.rs"

[[bin]]
name = "calculate-ratios"
path = "src/bin/calculate_ratios.rs"

[[bin]]
name = "import_simfin"
path = "src/bin/import_simfin.rs"

[[bin]]
name = "db_admin"
path = "src/bin/db_admin.rs"

[[bin]]
name = "import-schwab-prices"
path = "src/bin/import-schwab-prices.rs"



[lib]
name = "rust_stocks_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
futures = "0.3"
fuzzy-matcher = "0.3"
base64 = "0.22"
async-trait = "0.1"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }

# Additional dependencies for testing and development
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
wiremock = "0.5"
assert_matches = "1.5"
pretty_assertions = "1.4"
