[package]
name = "rust-stocks-tauri"
version = "0.1.0"
description = "Stock Analysis System - Tauri Backend"
authors = ["rust-stocks"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "rust-stocks-tauri"

[features]
default = []
test-utils = []
debug-logging = []

[[bin]]
name = "rust-stocks-tauri"
path = "src/main.rs"

# CLI Tools (moved from root workspace)




[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "migrate_fresh"
path = "src/bin/migrate_fresh.rs"

[[bin]]
name = "init_sp500"
path = "src/bin/init_sp500.rs"

[[bin]]
name = "db_admin"
path = "src/bin/db_admin.rs"

[[bin]]
name = "fetch_ciks"
path = "src/bin/fetch_ciks.rs"

[[bin]]
name = "import-schwab-prices"
path = "src/bin/import-schwab-prices.rs"





[lib]
name = "rust_stocks_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "7.1"
scraper = "0.19"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
futures = "0.3"
fuzzy-matcher = "0.3"
base64 = "0.22"
async-trait = "0.1"
indicatif = "0.17"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
rusqlite = { version = "0.32", features = ["chrono"] }
sha2 = "0.10.9"
zip = "0.6"
governor = "0.6"
reqwest-middleware = "0.3"
tower = "0.5"

# Additional dependencies for testing and development
[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
mockall = "0.12"
test-log = "0.2"
wiremock = "0.5"
assert_matches = "1.5"
pretty_assertions = "1.4"
